--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "eslint-plugin-prettier": "^5.5.1",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "prisma": "^6.10.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3",
-    "prisma": "^6.10.1"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@types/express": "^5.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
-    "@prisma/client": "^6.9.0"
+    "uuid": "^11.1.0"
   }
 }
