--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^24.0.7",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "@types/lodash": "^4.17.13",
     "eslint": "^9.30.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
@@ -39,6 +40,7 @@
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
+    "lodash": "^4.17.21",
     "uuid": "^11.1.0"
   }
 }
